apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.30.194
  selector:
    app: homepage
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
